k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ytdl
  namespace: ytdl
spec:
  selector:
    app: ytdl
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
